feat: adding storage to the manifest and adding the functionality to search for favorite tweets when clicking the favorites button.

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "version": "1.0",
   "action": {
